[gd_scene load_steps=5 format=3 uid="uid://bin2jdsnx10cl"]

[ext_resource type="Script" uid="uid://jqqrqqiqt3l2" path="res://scenes/project_summary.gd" id="1_htqiw"]
[ext_resource type="Theme" uid="uid://yx8fs2yo8rb" path="res://resources/themes/default_large_title.tres" id="1_sirx6"]
[ext_resource type="Texture2D" uid="uid://daomko2fyfwie" path="res://resources/icons/refresh_16.png" id="2_3fh01"]
[ext_resource type="Texture2D" uid="uid://cy83p5fb0ing6" path="res://resources/icons/folder_16.png" id="3_sampo"]

[node name="ProjectSummary" type="Control"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_htqiw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProjectName" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_sirx6")
text = "Name"

[node name="CustomerName" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Customer"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_sampo")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Version v00 rawcut"

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("2_3fh01")
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
